--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-
+<button onclick="_pcq.push(['triggerOptIn',{httpWindowOnly: true}]);">
+GET NOTIFICATIONS
+</button>
+    <a onclick="_pcq.push(['triggerOptIn',{httpWindowOnly: true}]);">
+GET NOTIFICATIONS
+</a>
     <!-- Navigation -->
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
