added download section

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
     </section>
 
-    <!-- Download Section 
+    Download Section 
     <section id="download" class="content-section text-center">
         <div class="download-section">
             <div class="container">
@@ -119,7 +119,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
